# spongebob

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
reports/latest/: metrics.json  portfolio_equity.csv  portfolio_metrics.json  trades.csv
reports/opt/20251031_2250/: best_params.json  results.csv
reports/opt/20251101_0156/: best_params.json  results.csv
src/spongebob/: config.py
src/spongebob/backtest/: engine.py
src/spongebob/scripts/: backtest.py  download.py  optimize.py  portfolio.py
src/spongebob/strategy/: mtf_momo.py
src/spongebob/utils/: indicators.py
tests/: test_indicators.py
