[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spongebob"
version = "0.1.0"
description = "Perps Hedge-Bot (1m, 3m, 15m, 30m, 1h)"
requires-python = ">=3.11,<3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
